# rust-todo-list

./: .gitignore  README.md  docker-compose.yml
postgre-db/: dockerfile  schemas.d2  schemas.sql
server/: Cargo.toml  dockerfile
server/api/: Cargo.toml
server/api/src/: auth.rs  lib.rs  todo.rs  todo_test.rs  user.rs  user_test.rs
server/entity/: Cargo.toml
server/entity/src/: lib.rs  mutation.rs
server/entity/src/entities/: mod.rs  prelude.rs  todos.rs  users.rs
server/myerror/: Cargo.toml
server/myerror/src/: lib.rs
server/src/: main.rs
