[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
entity = { path = "../entity" }
myerror = { path = "../myerror" }

actix-web = "4"
actix-http = "3.3.1"
actix-web-httpauth = "0.8.0"
env_logger = "0"
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
lazy_static = "1"
jsonwebtoken = "8.3.0"
time = "0.3.20"
serde = "1"
serde_json = "1.0"
derive_more = "0.99.17"
bcrypt = "0.14.0"
futures-util = "0.3.28"
chrono = "0.4.24"