[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
myerror = { path = "../myerror" }

sea-orm = { version = "0.11.2", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = "1"
validator = { version = "0.16", features = ["derive"] }
fancy-regex = "0.11.0"
lazy_static = "1"
bcrypt = "0.14.0"
log = "0.4"